[project]
name = "nerdtracker_server"
version = "0.0.1"
description = "Server for NerdTracker 2.0"
authors = [
    {name = "Cesar E. Garza", email="cesar@cegarza.com"},
]
requires-python = "=3.9"

[tool.pytest.ini_options]
testpaths = "nerdtracker_server/tests"
addopts = [
    "-v",
    "--tb=auto",
    "--showlocals",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow",
]

[tool.black]
line-length = 80
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
pretty = true

[tool.isort]
profile = "black"
line_length = 80
src_paths = ["nerdtracker_server"]